--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero relative" style="background-image: url('./large_brush_clear.png');">
+    <section class="hero relative" style="background-image: url('./landscaped.png');">
         <div class="hero-overlay"></div>
         <div class="container mx-auto px-4 h-full flex items-center">
             <div class="text-white max-w-xl z-10">
