--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Season Lawn Pros LLC - Professional Lawn Care Services</title>
+    <!-- Optional but harmless -->
+    <meta name="keywords"
+      content="grass cutting, lawn mowing, spring cleanup, fall cleanup, yard cleanup, Lancaster Ohio lawn care, Canal Winchester lawn care, Pickerington lawn care">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
